--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.4.0"
+        "php": ">=7.4.0",
+        "folded/exception": "0.3.*"
     },
     "require-dev": {
         "phpunit/phpunit": "9.*",
