--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require-dev": {
         "phpunit/phpunit": "9.*",
         "pestphp/pest": "0.3.*",
-        "friendsofphp/php-cs-fixer": "2.*"
+        "friendsofphp/php-cs-fixer": "2.*",
+        "phpstan/phpstan": "0.12.*"
     },
     "autoload": {
         "psr-4": {
@@ -32,7 +33,10 @@
         ]
     },
     "scripts": {
-        "test": "pest --coverage",
+        "test": [
+            "pest --coverage",
+            "phpstan analyse"
+        ],
         "lint": "php-cs-fixer --allow-risky=yes fix"
     }
 }
